# Rooki

./: collect_imgs_man.py  create_dataset.py  data.pickle  main.py  pyproject.toml  requirements.txt  run.sh  train.py
