[project]
name = "rooki"
version = "0.1.0"
package-mode = false
description = "Russian gesture alphabet training application"
authors = [
    {name = "Glutesha"}
]
readme = "README.md"
requires-python = "3.11.*"
dependencies = [
    "opencv-python (==4.7.0.68)",
    "mediapipe (==0.10.5)",
    "scikit-learn (==1.3.1)",
    "pygame (==2.5.2)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
